Fix broken links across translations

--- a/src/pages/de/core-concepts/astro-components.mdx
+++ b/src/pages/de/core-concepts/astro-components.mdx
@@ -6,7 +6,7 @@ description: Eine Einführung in die Syntax der .astro-Komponenten.
 
 **Astro-Komponenten** sind die Grundbausteine eines jeden Astro-Projekts. Sie sind reine HTML-Vorlagen ohne clientseitigen Laufzeit-Code.
 
-Die Astro-Komponentensyntax ist eine Obermenge von HTML. Die Syntax wurde [so konzipiert, dass sie jedem vertraut ist, der Erfahrung mit dem Schreiben von HTML oder JSX hat](/de/comparing-astro-vs-other-tools/#astro-vs-jsx) und bietet Unterstützung für die Verwendung von Komponenten und JavaScript-Ausdrücken. Du erkennst eine Astro-Komponente an ihrer Dateierweiterung: `.astro`.
+Die Astro-Komponentensyntax ist eine Obermenge von HTML. Die Syntax wurde so konzipiert, dass sie jedem vertraut ist, der Erfahrung mit dem Schreiben von HTML oder JSX hat und bietet Unterstützung für die Verwendung von Komponenten und JavaScript-Ausdrücken. Du erkennst eine Astro-Komponente an ihrer Dateierweiterung: `.astro`.
 
 Astro-Komponenten sind extrem flexibel. Oft enthält eine Astro-Komponente eine **wiederverwendbare Benutzeroberfläche der Seite**, wie z. B. eine Kopfzeile oder eine Profilkarte. In anderen Fällen kann eine Astro-Komponente einen kleineren HTML-Schnipsel enthalten, z. B. eine Sammlung üblicher `<meta>`-Tags, die die Suchmaschinenoptimierung erleichtern. Astro-Komponenten können sogar ein ganzes Seitenlayout enthalten.
 
