--- a/src/pages/es/core-concepts/astro-components.mdx
+++ b/src/pages/es/core-concepts/astro-components.mdx
@@ -9,7 +9,7 @@ i18nReady: true
 
 **Si sabes HTML, ya sabes lo suficiente para escribir tu primer componente Astro.**
 
-La sintaxis del componente de Astro es un superconjunto de HTML. Fue [diseñada para sea familiar para alguien con experiencia en HTML o JSX](/es/comparing-astro-vs-other-tools/#astro-vs-jsx), además es compatible con componentes y expresiones de JavaScript. Puedes identificar los componentes Astro por su extensión: `.astro`.
+La sintaxis del componente de Astro es un superconjunto de HTML. Fue [diseñada para sea familiar para alguien con experiencia en HTML o JSX](#diferencias-entre-astro-y-jsx), además es compatible con componentes y expresiones de JavaScript. Puedes identificar los componentes Astro por su extensión: `.astro`.
 
 Los componentes de Astro son extremadamente flexibles. Un componente de Astro puede contener **UI reutilizable**, tal como encabezados o una tarjeta de perfil. También puede contener un fragmento pequeño de HTML, o una colección de etiquetas `<meta>` para facilitar nuestro trabajo con el SEO. Los componentes de Astro también pueden contener el layout de una página.
 
@@ -114,7 +114,7 @@ Puedes definir variables locales de JavaScript dentro del script del componente 
 :::note[dinámico vs reactivo]
 Usando este enfoque, puedes incluir valores ***dinámicos*** que son calculados en el *frontmatter*. Sin embargo, una vez incluidos, estos valores no son ***reactivos*** por lo que nunca cambiarán. Los componentes Astro son maquetados que solo son ejecutados una vez, en la construcción de la página.
 
-Lee abajo para más ejemplos sobre las [diferencias entre Astro y JSX](/es/comparing-astro-vs-other-tools/#astro-vs-jsx)
+Lee abajo para más ejemplos sobre las [diferencias entre Astro y JSX](#diferencias-entre-astro-y-jsx)
 :::
 
 ### Variables
