--- a/src/pages/es/guides/troubleshooting.mdx
+++ b/src/pages/es/guides/troubleshooting.mdx
@@ -83,7 +83,7 @@ Luego chequea la declaración de importación:
 
 - Estás realizando la importación desde el lugar correcto? (Chequea la ruta de importación.)
 
-- Tu importación posee el mismo nombre que el del componente? (Chequea el nombre de tu componente y que [cumpla con la sintaxis de componentes `.astro`](/es/comparing-astro-vs-other-tools/#astro-vs-jsx).)
+- Tu importación posee el mismo nombre que el del componente? (Chequea el nombre de tu componente y que [cumpla con la sintaxis de componentes `.astro`](/es/core-concepts/astro-components/#diferencias-entre-astro-y-jsx).)
 
 - Has incluido la extensión en la importación? (Chequea que el archivo del cual importas contiene una extensión, ej.: `.astro`, `.md`, `.jsx`, `.vue`.)
 
