--- a/src/pages/fr/core-concepts/astro-components.mdx
+++ b/src/pages/fr/core-concepts/astro-components.mdx
@@ -6,7 +6,7 @@ description: Une introduction à la syntaxe des composants en .astro.
 
 **Les composants Astro** sont les blocs de base de tout projet Astro. Il permettent de mettre en forme uniquement avec du HTML, sans code exécuté sur le navigateur.
 
-La syntaxe des composants Astro est une surcouche du HTML. Elle a été conçue pour [ressembler à HTML et JSX](/fr/comparing-astro-vs-other-tools/#astro-vs-jsx), et ajoute la possibilité d'inclure des composants et des expressions JavaScript. Vous pouvez identifier un composant Astro par son extension de fichier : `.astro`.
+La syntaxe des composants Astro est une surcouche du HTML. Elle a été conçue pour ressembler à HTML et JSX, et ajoute la possibilité d'inclure des composants et des expressions JavaScript. Vous pouvez identifier un composant Astro par son extension de fichier : `.astro`.
 
 Les composants Astro sont extrêmement flexibles. Il y a souvent des composants qui contiennent des **UI réutilisables sur la page**, comme un header ou un profil. D'autres composants peuvent contenir un morceau de HTML, comme un ensemble de balises `<meta>` qui facilitent la SEO. Les composants Astro peuvent aussi contenir une mise en page entière (appelée _Layout_).
 
