--- a/src/pages/fr/guides/troubleshooting.mdx
+++ b/src/pages/fr/guides/troubleshooting.mdx
@@ -66,7 +66,7 @@ Ensuite, vérifiez votre appel `import` :
 
 - Votre importation dirige-t-elle vers le bon endroit ? (Vérifiez votre chemin d'import.)
 
-- Est-ce que votre importation a le même nom que le composant importé ? (Vérifiez le nom de votre composant et que cela [suit la syntaxe `.astro`](/fr/comparing-astro-vs-other-tools/#astro-vs-jsx).)
+- Est-ce que votre importation a le même nom que le composant importé ? (Vérifiez le nom de votre composant et que cela suit la syntaxe `.astro`.)
 
 - Avez-vous inclu l'extension dans l'importation ? (Vérifiez que le fichier importé contient une extension. Ex: `.astro`, `.md`, `.jsx`, `.vue`)
 
