--- a/src/pages/zh-cn/core-concepts/astro-components.mdx
+++ b/src/pages/zh-cn/core-concepts/astro-components.mdx
@@ -8,7 +8,7 @@ description: 关于 .astro 组件语法的介绍。
 
 **如果懂 HTML，你就已经有足够的知识来编写你的第一个 Astro 组件了**。
 
-Astro 组件的语法是 HTML 的超集。该语法[设计地让所有拥有编写 HTML 或 JSX 经验的人都感到熟悉](/zh-cn/comparing-astro-vs-other-tools/#astro-vs-jsx)，并增加包括对组件和 JavaScript 表达式的支持。你可以通过文件扩展名 `.astro` 来创建新的 Astro 组件。
+Astro 组件的语法是 HTML 的超集。该语法[设计地让所有拥有编写 HTML 或 JSX 经验的人都感到熟悉](#astro-和-jsx-间的差异)，并增加包括对组件和 JavaScript 表达式的支持。你可以通过文件扩展名 `.astro` 来创建新的 Astro 组件。
 
 Astro 组件非常灵活的。通常情况下，Astro 组件会包含一些**可在页面中复用的 UI**，如 header 或简介卡。在其他时候，Astro 组件可能包含一个较小的 HTML 片段，像是常见的使 SEO 更好的 `<meta>` 标签集合。Astro 组件甚至可以包含整个页面布局。
 
