--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -144,18 +144,18 @@ You can specify each expected property in the `schema` field of `defineCollectio
 import { z, defineCollection } from 'astro:content';
 
 const releases = defineCollection({
-  schema: {
+  schema: z.object({
     title: z.string(),
     version: z.number(),
-  },
+  }),
 });
 
 const engineeringBlog = defineCollection({
-  schema: {
+  schema: z.object({
     title: z.string(),
     tags: z.array(z.string()),
     image: z.string().optional(),
-  },
+  }),
 });
 
 export const collections = {
@@ -177,7 +177,7 @@ The following schema illustrates each of these data types in use:
 import { z, defineCollection } from 'astro:content';
 
 defineCollection({
-  schema: {
+  schema: z.object({
     isDraft: z.boolean(),
     title: z.string(),
     sortOrder: z.number(),
@@ -189,7 +189,7 @@ defineCollection({
     footnote: z.string().optional(),
     author: z.string().default('Anonymous'),
     language: z.enum(['en', 'es']),
-  }
+  })
 })
 ```
 
@@ -228,9 +228,9 @@ const blog = defineCollection({
     // Otherwise, fall back to the default slug.
     return data.permalink || defaultSlug;
   },
-  schema: {
+  schema: z.object({
     permalink: z.string().optional(),
-  },
+  }),
 });
 
 export const collections = { blog };
