chore: add z.object to api reference

--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -718,10 +718,10 @@ Content collections offer APIs to configure and query your Markdown or MDX docum
 // src/content/config.ts
 import { z, defineCollection } from 'astro:content';
 const blog = defineCollection({
-  schema: {
+  schema: z.object({
     title: z.string(),
     permalink: z.string().optional(),
-  },
+  }),
   slug({ id, data, defaultSlug, body }) {
     return data.permalink ?? defaultSlug;
   }
@@ -736,9 +736,9 @@ This function accepts the following properties:
 
 #### `schema`
 
-**Type:** `TSchema extends ZodAnyObject | undefined`
+**Type:** `TSchema extends ZodType`
 
-`schema` is an optional object to configure the type and shape of document frontmatter for a collection. Each object value must use [a Zod validator](https://github.com/colinhacks/zod).
+`schema` is an optional Zod object to configure the type and shape of document frontmatter for a collection. Each object value must use [a Zod validator](https://github.com/colinhacks/zod).
 
 #### `slug()`
 
