--- a/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
@@ -37,17 +37,17 @@ You can pass a `--template` argument to the `create-astro` command to start a ne
   <PackageManagerTabs>
     <Fragment slot="npm">
     ```shell
-    npm create astro -- --template withastro/docs
+    npm create astro@latest -- --template withastro/docs
     ```
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
-    pnpm create astro --template withastro/docs
+    pnpm create astro@latest --  --template withastro/docs
     ```
     </Fragment>
     <Fragment slot="yarn">
     ```shell
-    yarn create astro --template withastro/docs
+    yarn create astro --  --template withastro/docs
     ```
     </Fragment>
   </PackageManagerTabs>
