--- a/src/pages/en/integrations/integrations.mdx
+++ b/src/pages/en/integrations/integrations.mdx
@@ -55,17 +55,17 @@ You can start a new astro project based on an existing github repostory by passi
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm create astro -- --template <github-username>/<github-repo>
+  npm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm create astro --template <github-username>/<github-repo>
+  pnpm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn create astro --template <github-username>/<github-repo>
+  yarn create astro -- --template <github-username>/<github-repo>
   ```
   </Fragment>
 </PackageManagerTabs>
