--- a/src/pages/en/getting-started.mdx
+++ b/src/pages/en/getting-started.mdx
@@ -37,7 +37,7 @@ Visit [astro.new](https://astro.new/) and choose from a variety of templates to 
 
 ## Start your first project
 
-Get a new Astro project up and running locally with our helpful `create-astro` CLI wizard!
+Get a new Astro project up and running locally with our helpful `create astro` CLI wizard!
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -60,9 +60,7 @@ Get a new Astro project up and running locally with our helpful `create-astro` C
   </Fragment>
 </PackageManagerTabs>
 
-Our [Installation Guide](/en/install/auto/) has full, step-by-step instructions for installing Astro using your favorite package manager.
-
-
+Our [Installation Guide](/en/install/auto/) has full, step-by-step instructions for installing Astro using our CLI wizard, creating a new project from an existing Astro GitHub repository, and for installing Astro manually.
 
 
 ## Learn Astro
