--- a/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
@@ -41,17 +41,17 @@ You can pass a `--template` argument to the `create-astro` command to start a ne
   <PackageManagerTabs>
     <Fragment slot="npm">
     ```shell
-    npm create astro -- --template withastro/blog
+    npm create astro@latest -- --template withastro/blog
     ```
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
-    pnpm create astro --template withastro/blog
+    pnpm create astro@latest --  --template withastro/blog
     ```
     </Fragment>
     <Fragment slot="yarn">
     ```shell
-    yarn create astro --template withastro/blog
+    yarn create astro --  --template withastro/blog
     ```
     </Fragment>
   </PackageManagerTabs>
