--- a/src/pages/es/integrations/integrations.mdx
+++ b/src/pages/es/integrations/integrations.mdx
@@ -55,17 +55,17 @@ Puedes inicializar un proyecto en Astro desde un repositorio de GitHub existente
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm create astro -- --template <usuario-github>/<github-repo>
+  npm create astro@latest -- --template <usuario-github>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm create astro --template <usuario-github>/<github-repo>
+  pnpm create astro@latest -- --template <usuario-github>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn create astro --template <usuario-github>/<github-repo>
+  yarn create astro -- --template <usuario-github>/<github-repo>
   ```
   </Fragment>
 </PackageManagerTabs>
