--- a/src/pages/en/reference/configuration-reference.mdx
+++ b/src/pages/en/reference/configuration-reference.mdx
@@ -300,6 +300,28 @@ This value is relative to the `outDir`.
 ```
 
 
+### build.assets
+
+<p>
+
+**Type:** `string`<br />
+**Default:** `'_astro'`<br />
+<Since v="2.0.0" />
+</p>
+
+Specifies the directory in the build output where Astro-generated assets (bundled JS and CSS for example) should live.
+
+```js
+{
+  build: {
+    assets: '_custom'
+  }
+}
+```
+**See Also:**
+- outDir
+
+
 ### build.serverEntry
 
 <p>
