--- a/src/pages/es/integrations/integrations.mdx
+++ b/src/pages/es/integrations/integrations.mdx
@@ -55,7 +55,7 @@ Puedes inicializar un proyecto en Astro desde un repositorio de GitHub existente
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm create astro@latest -- --template <usuario-github>/<github-repo>
+  npm create astro -- --template <usuario-github>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
