--- a/src/pages/es/integrations/integrations.mdx
+++ b/src/pages/es/integrations/integrations.mdx
@@ -65,7 +65,7 @@ Puedes inicializar un proyecto en Astro desde un repositorio de GitHub existente
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn create astro -- --template <usuario-github>/<github-repo>
+  yarn create astro --template <usuario-github>/<github-repo>
   ```
   </Fragment>
 </PackageManagerTabs>
