--- a/src/pages/es/integrations/integrations.mdx
+++ b/src/pages/es/integrations/integrations.mdx
@@ -60,7 +60,7 @@ Puedes inicializar un proyecto en Astro desde un repositorio de GitHub existente
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm create astro -- --template <usuario-github>/<github-repo>
+  pnpm create astro --template <usuario-github>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
