update create astro and template flag instructions

--- a/src/pages/en/core-concepts/project-structure.mdx
+++ b/src/pages/en/core-concepts/project-structure.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 
-Your new Astro project generated from the `create-astro` CLI wizard already includes some files and folders. Others, you will create yourself and add to Astro's existing file structure.
+Your new Astro project generated from the `create astro` CLI wizard already includes some files and folders. Others, you will create yourself and add to Astro's existing file structure.
 
 Here's how an Astro project is organized, and some files you will find in your new project.
 
