--- a/src/pages/en/install/manual.mdx
+++ b/src/pages/en/install/manual.mdx
@@ -21,7 +21,7 @@ Ready to install Astro? Follow our automatic or manual set-up guide to get start
 
 #### Installation
 
-If you prefer not to use our automatic `create-astro` CLI tool, you can set up your project yourself by following the guide below.
+If you prefer not to use our automatic `create astro` CLI tool, you can set up your project yourself by following the guide below.
 
 ## 1. Create your directory
 
