--- a/src/pages/en/integrations/integrations.mdx
+++ b/src/pages/en/integrations/integrations.mdx
@@ -50,17 +50,17 @@ Check out our new [integrations library](https://astro.build/integrations/), and
 
 ## Repositories / Starter Templates
 
-You can start a new astro project based on an existing github repostory by passing a `--template` argument to the `create-astro` command.
+You can start a new astro project based on an existing github repostory by passing a `--template` argument to the `create astro` command.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm create astro -- --template <github-username>/<github-repo>
+  npm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm create astro --template <github-username>/<github-repo>
+  pnpm create astro@latest --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
