--- a/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
@@ -43,7 +43,7 @@ When you rebuild your Docusaurus site in Astro, you will notice some important d
 
 To convert a Docusaurus documentation site to Astro, start with our official docs theme starter template, or explore more community docs themes in our [theme showcase](https://astro.build/themes/docs/). 
 
-You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our offiicial starters. Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
+You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters. Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
