--- a/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -34,7 +34,7 @@ When you rebuild your Jekyll site in Astro, you will notice some important diffe
 
 To convert a Jekyll blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/).
 
-You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our offiicial starters. Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
+You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters. Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
