i18n(ja): Update astro-pages.mdx (#2319)
Co-authored-by: Kyosuke <kyosuke@users.noreply.github.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/ja/core-concepts/astro-pages.mdx
+++ b/src/pages/ja/core-concepts/astro-pages.mdx
@@ -9,7 +9,7 @@ i18nReady: true
 
 ## サポートしているページファイル
 
-Astroは`src/pages/`ディレクトリの次のファイルタイプをサポートしています。
+Astroは`src/pages/`ディレクトリで次のファイルタイプをサポートしています。
 - [`.astro`](#astroページ)
 - [`.md`](#markdownmdxページ)
 - `.mdx` （[MDXインテグレーションがインストール](/ja/guides/integrations-guide/mdx/#installation)されている場合）
@@ -20,9 +20,11 @@ Astroは`src/pages/`ディレクトリの次のファイルタイプをサポー
 
 Astroは、**ファイルベースルーティング**と呼ばれるルーティング手法を採用しています。 `src/pages/`ディレクトリの各ファイルはそのファイルパスに基づいたエンドポイントになります。
 
-ページ間のリンクを張るには、HTMLの[`<a>`要素](https://developer.mozilla.org/ja/docs/Web/HTML/Element/a)をコンポーネントテンプレートに記述してください。
-
 📚 [Astroのルーティング](/ja/core-concepts/routing/)について詳しくみる。
+
+### ページ間のリンク
+
+サイト内の別のページへリンクを張るには、HTML標準の[`<a>`要素](https://developer.mozilla.org/ja/docs/Web/HTML/Element/a)をコンポーネントテンプレートに記述してください。
 
 ## Astroページ
 
@@ -42,7 +44,7 @@ Astroページは`.astro`拡張子を使い[Astroコンポーネント](/ja/core
 </html>
 ```
 
-すべてのページで同じHTML要素を繰り返すことを避けるために、共通の `<head>` と `<body>` 要素を独自の[レイアウトコンポーネント](/ja/core-concepts/layouts/)に移動できます。レイアウトコンポーネントはいくつでも使えます。
+すべてのページで同じHTML要素を繰り返すことを避けるために、共通の`<head>`と`<body>`要素を独自の[レイアウトコンポーネント](/ja/core-concepts/layouts/)に移動できます。レイアウトコンポーネントはいくつでも使えます。
 
 ```astro {3} /</?MySiteLayout>/
 ---
@@ -58,9 +60,9 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 ## Markdown/MDXページ
 
-Astroは `/src/pages/` にあるMarkdown (`.md`) ファイルも、最終的なWebサイトのページとして扱います。もし[MDXインテグレーションがインストールされている](/ja/guides/integrations-guide/mdx/#installation)場合、MDX(`.mdx`)ファイルも同じように扱われます。これらは一般的に、ブログの投稿やドキュメントのような、テキストを多用するページに使用されます。
+Astroは`/src/pages/`にあるMarkdown (`.md`) ファイルも、最終的なWebサイトのページとして扱います。もし[MDXインテグレーションがインストールされている](/ja/guides/integrations-guide/mdx/#installation)場合、MDX(`.mdx`)ファイルも同じように扱われます。これらは一般的に、ブログの投稿やドキュメントのような、テキストを多用するページに使用されます。
 
-ページレイアウトは[Markdownファイル](#markdownmdxページ)に対して特に有効です。Markdownファイルは特別な `layout`というfront-matterプロパティを使用して、Markdownコンテンツを `<html>...</html>` ページドキュメントにラップする [レイアウトコンポーネント](/ja/core-concepts/layouts/)を指定できます。
+ページレイアウトは[Markdownファイル](#markdownmdxページ)に対して特に有効です。Markdownファイルは特別な `layout`というフロントマターのプロパティを使用して、Markdownコンテンツを`<html>...</html>`ページドキュメントにラップする [レイアウトコンポーネント](/ja/core-concepts/layouts/)を指定できます。
 
 ```md {3}
 ---
@@ -81,7 +83,7 @@ title: 'Markdownページ'
 
 ## カスタム404エラーページ
 
-カスタムの404エラーページを作成するには、`src/pages`に `404.astro` または `404.md` ファイルを作成します。
+カスタムの404エラーページを作成するには、`src/pages`に`404.astro`または`404.md`ファイルを作成します。
 
-これは `404.html` ページにビルドされます。ほとんどの[デプロイサービス](/ja/guides/deploy/)はこのファイルを見つけて使用します。
+これは`404.html`ページにビルドされます。ほとんどの[デプロイサービス](/ja/guides/deploy/)はこのファイルを見つけて使用します。
 
