--- a/src/pages/fr/concepts/why-astro.mdx
+++ b/src/pages/fr/concepts/why-astro.mdx
@@ -28,7 +28,7 @@ En revanche, la plupart des frameworks web modernes sont conçus pour créer des
 C'est l'une des différences les plus importantes à comprendre concernant Astro. L'accent unique mis par Astro sur le contenu lui permet de faire des compromis et d'offrir des fonctionnalités de performance inégalées qui n'auraient pas de sens pour des frameworks web plus axés sur les applications.
 
 :::tip
-Si votre projet se situe dans le deuxième camp des "applications", Astro n'est peut-être pas le bon choix pour votre projet... **et ce n'est pas grave !** Consultez [Next.js](https://nextjs.org/) pour une excellente alternative de framework Web axé sur les applications.
+Si votre projet se situe dans le deuxième camp des "applications", Astro n'est peut-être pas le bon choix pour votre projet... **et ce n'est pas grave !** Consultez [Next.js](https://nextjs.org/) pour une alternative à Astro plus axée sur les applications.
 :::
 
 
