edit: expected property -> expected shape

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -137,7 +137,7 @@ To configure schemas, create a `src/content/config.ts` file (`.js` and `.mjs` ex
 
 For example, say you maintain two collections: one for release announcements and one for blog content. Your entries at `src/content/releases/` should include a `title` and `version`.  Your `src/content/engineering-blog/` collection entries should have a `title`, list of `tags`, and an optional `image` URL. 
 
-You can specify each expected property in the `schema` field of `defineCollection`:
+You can specify the expected shape of your frontmatter with the `schema` field of `defineCollection`:
 
 ```ts
 // src/content/config.ts
