--- a/src/pages/fr/concepts/why-astro.mdx
+++ b/src/pages/fr/concepts/why-astro.mdx
@@ -28,7 +28,7 @@ En revanche, la plupart des frameworks web modernes sont conçus pour créer des
 C'est l'une des différences les plus importantes à comprendre concernant Astro. L'accent unique mis par Astro sur le contenu lui permet de faire des compromis et d'offrir des fonctionnalités de performance inégalées qui n'auraient pas de sens pour des frameworks web plus axés sur les applications.
 
 :::tip
-Si votre projet se situe dans le deuxième camp des "applications", Astro n'est peut-être pas le bon choix pour votre projet... **et ce n'est pas grave !** Consultez [Next.js](https://nextjs.org/) pour une excellente alternative de framework Web axé sur les applications.
+Si votre projet se situe dans le deuxième camp des "applications", Astro n'est peut-être pas le bon choix pour votre projet... **et ce n'est pas grave !** Consultez [Next.js](https://nextjs.org/) pour une alternative à Astro plus axée sur les applications.
 :::
 
 
@@ -54,7 +54,7 @@ De bonnes performances sont toujours importantes, mais elles sont *spécialement
 - 20 % plus rapide → 10 % de conversions en plus ([Furniture Village](https://www.thinkwithgoogle.com/intl/en-gb/marketing-strategies/app-and-mobile/furniture-village-and-greenlight-slash-page-load-times-boosting-user-experience/))
 - 40% plus rapide → 15% d'inscriptions en plus ([Pinterest](https://medium.com/pinterest-engineering/driving-user-growth-with-performance-improvements-cfc50dafadd7))
 - 850ms plus rapide → 7% de conversions en plus ([COOK](https://web.dev/why-speed-matters/))
-- 1 seconde plus lent → 10 % d'utilisateurs en moins ([BBC](https://www.creativebloq.com/features/how-the-bbc-builds-websites-that-scale))
+- Chaque seconde de ralentissement → 10 % d'utilisateurs en moins ([BBC](https://www.creativebloq.com/features/how-the-bbc-builds-websites-that-scale))
 
 Dans de nombreux frameworks web, il est facile de créer un site web qui a l'air génial pendant le développement, mais qui se charge douloureusement lentement une fois déployé. JavaScript est souvent le coupable, car les téléphones des utilisateurs et les appareils moins puissants atteignent rarement la vitesse de l'ordinateur portable d'un développeur.
 
