Update `project-structure.mdx` translation

--- a/src/pages/pt-br/core-concepts/project-structure.mdx
+++ b/src/pages/pt-br/core-concepts/project-structure.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro';
 
-Seu novo projeto Astro gerado a partir do assistente de linha de comando `create-astro` já vem com alguns arquivos e diretórios. Outros, você irá criar por si mesmo e adicionar a estrutura de arquivos já existentes do Astro.
+Seu novo projeto Astro gerado a partir do assistente de linha de comando `create astro` já vem com alguns arquivos e diretórios. Outros, você irá criar por si mesmo e adicionar a estrutura de arquivos já existentes do Astro.
 
 Aqui está como um projeto Astro é organizado e alguns arquivos que você irá encontrar no seu novo projeto.
 
