Update `getting-started.mdx` translation

--- a/src/pages/pt-br/getting-started.mdx
+++ b/src/pages/pt-br/getting-started.mdx
@@ -36,7 +36,7 @@ Visite [astro.new](https://astro.new/) e escolha entre uma variedade de template
 
 ## Comece seu primeiro projeto
 
-Tenha um novo projeto Astro rodando localmente com o nosso útil assistente de linha de comando `create-astro`!
+Tenha um novo projeto Astro rodando localmente com o nosso útil assistente de linha de comando `create astro`!
 
 <PackageManagerTabs>
   <Fragment slot="npm">
