Fix merge conflict

--- a/src/pages/pt-br/getting-started.mdx
+++ b/src/pages/pt-br/getting-started.mdx
@@ -59,7 +59,7 @@ Tenha um novo projeto Astro rodando localmente com o nosso útil assistente de l
   </Fragment>
 </PackageManagerTabs>
 
-Nosso [Guia de Instalação](/pt-br/install/auto/) tem instruções detalhadas passo-a-passo de como instalar Astro com seu gerenciador de pacotes favorito.
+Nosso [Guia de Instalação](/pt-br/install/auto/) tem instruções detalhadas passo-a-passo de como instalar Astro usando nosso assistente de CLI, de criação de um novo projeto a partir de um repositório Astro existente no GitHub, e de instalação manual.
 
 
 ## Aprenda Astro
