edit: manual instructions -> auto instructions

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -87,13 +87,7 @@ Astro generates TypeScript types from your content collections in the `.astro` d
 If you're using Git for version control, we recommend ignoring this generated directory by adding `.astro` to your `.gitignore`.
 :::
 
-These commands will also add a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to your [`src/env.d.ts` file](/en/guides/typescript/#setup) if one exists. You can add this entry manually like so:
-
-```ts title="src/env.d.ts" ins={2}
-// use a relative path `../` to the `.astro` directory
-/// <reference types="../.astro/types.d.ts" />
-/// <reference path="astro/client" />
-````
+These commands will also generate a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to include `.astro` types in your project. This will be added to your project's [`src/env.d.ts` file](/en/guides/typescript/#setup), or write the file automatically if none exists.
 
 ## The content directory
 
