--- a/src/pages/pt-br/getting-started.mdx
+++ b/src/pages/pt-br/getting-started.mdx
@@ -30,13 +30,13 @@ Veja o nosso guia detalhado [Por que Astro?](/pt-br/concepts/why-astro/) para ap
 Visite [astro.new](https://astro.new/) e escolha entre uma variedade de templates para começar. Se divirta com uma versão completa e funcional do Astro direto do seu navegador!
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-    <Button href="https://astro.new/basics?on=stackblitz">Início rápido!</Button>
+    <Button href="https://astro.new/basics?on=stackblitz">Iniciar template básico</Button>
     <Button variant="outline" href="https://astro.new/">Veja todos os templates →</Button>
 </div>
 
 ## Comece seu primeiro projeto
 
-Tenha um novo projeto Astro rodando localmente com o nosso útil assistente de linha de comando `create-astro`!
+Tenha um novo projeto Astro rodando localmente com o nosso útil assistente de linha de comando `create astro`!
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -59,7 +59,7 @@ Tenha um novo projeto Astro rodando localmente com o nosso útil assistente de l
   </Fragment>
 </PackageManagerTabs>
 
-Nosso [Guia de Instalação](/pt-br/install/auto/) tem instruções detalhadas passo-a-passo de como instalar Astro com seu gerenciador de pacotes favorito.
+Nosso [Guia de Instalação](/pt-br/install/auto/) tem instruções detalhadas passo-a-passo de como instalar Astro usando nosso assistente de CLI, de criação de um novo projeto a partir de um repositório Astro existente no GitHub, e de instalação manual.
 
 
 ## Aprenda Astro
@@ -98,7 +98,7 @@ Junte-se a nós no [Discord do Astro](https://astro.build/chat) para compartilha
 💬 Compartilhe o que você tem feito no canal `#showcase`!
 
 
-## Aprenda Mais
+## O que há de novo?
 
 [Blog do Astro](https://astro.build/blog/)
 
