edit: add `src/env.d.ts` note to `astro sync`

--- a/src/pages/en/reference/cli-reference.mdx
+++ b/src/pages/en/reference/cli-reference.mdx
@@ -119,7 +119,11 @@ This command only checks types within `.astro` files.
   <Since v="1.7.0" />
 </p>
 
-Generates TypeScript types for all Astro modules. Today, this includes the `astro:content` module for the (experimental) [Content Collections API](/en/guides/content-collections/).
+:::tip
+Running `astro dev` or `astro build` will run the `sync` command as well.
+:::
+
+Generates TypeScript types for all Astro modules. This sets up a [`src/env.d.ts` file](/en/guides/typescript/#setup) for type inferencing, and defines the `astro:content` module for the (experimental) [Content Collections API](/en/guides/content-collections/).
 
 ## `astro add`
 
