--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -87,7 +87,12 @@ Astro generates TypeScript types from your content collections in the `.astro` d
 If you're using Git for version control, we recommend ignoring this generated directory by adding `.astro` to your `.gitignore`.
 :::
 
-These commands will also generate a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to include `.astro` types in your project. This will be added to your project's [`src/env.d.ts` file](/en/guides/typescript/#setup), or write the file automatically if none exists.
+These commands will also generate a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to include `.astro` types in your project. The following will be added to your project's [`src/env.d.ts` file](/en/guides/typescript/#setup) (Astro creates this file if none exists):
+
+```ts title="src/env.d.ts"
+// using a relative path `../` to the `.astro` directory
+/// <reference types="../.astro/types.d.ts" />
+```
 
 ## The content directory
 
