edit: the following -> will be created

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -87,7 +87,7 @@ Astro generates TypeScript types from your content collections in the `.astro` d
 If you're using Git for version control, we recommend ignoring this generated directory by adding `.astro` to your `.gitignore`.
 :::
 
-These commands will also generate a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to include `.astro` types in your project. The following will be added to your project's [`src/env.d.ts` file](/en/guides/typescript/#setup) (Astro creates this file if none exists):
+These commands will also generate a [reference path](https://www.typescriptlang.org/docs/handbook/triple-slash-directives.html#-reference-path-) to include `.astro` types in your project. A [`src/env.d.ts` file](/en/guides/typescript/#setup) will be created for you if one does not exist, and the following will be added:
 
 ```ts title="src/env.d.ts"
 // using a relative path `../` to the `.astro` directory
