update of getting-started, vercel, imports and markdown-content

--- a/src/pages/es/getting-started.mdx
+++ b/src/pages/es/getting-started.mdx
@@ -95,7 +95,7 @@ Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones paso a pa
 💬 ¡Comparte lo que has hecho en nuestro canal `#showcase`!
 
 
-## Aprende más
+## ¿Qué hay de nuevo?
 
 [Blog de Astro](https://astro.build/blog/)
 
