--- a/src/pages/es/guides/imports.mdx
+++ b/src/pages/es/guides/imports.mdx
@@ -79,15 +79,17 @@ Si bien Astro entiende la sintaxis de JSX por defecto, deberás incluir una inte
 
 ## Paquetes NPM
 
+Si tu has instalado un paquete de NPM, puedes importarlo en Astro.
+
 ```astro
 ---
 import { Icon } from 'astro-icon';
 ---
 ```
 
-Si tu has instalado un paquete NPM, puedes importarlo en Astro. Incluso si un paquete fue publicado usando un formato antiguo, Astro convertirá el paquete a ESM para que las declaraciones `import` funcionen.
+Si un paquete fue publicado usando un formato antiguo, Astro convertirá el paquete a ESM para que las declaraciones `import` funcionen. En algunos casos, tu necesitarás ajustar tu [configuración de `vite`](/es/reference/configuration-reference/#vite) para que funcione.
 
-:::warning
+:::caution
 Algunos paquetes dependen de un entorno de navegador. Los componentes de Astro se ejecutan en el servidor, por lo que importar estos paquetes en el frontmatter puede [llevarte a errores](/es/guides/troubleshooting/#document-or-window-is-not-defined).
 :::
 
