--- a/src/pages/es/getting-started.mdx
+++ b/src/pages/es/getting-started.mdx
@@ -36,7 +36,7 @@ Visita [astro.new](https://astro.new/) y elige entre una variedad de plantillas 
 
 ## Empieza tu primer proyecto
 
-¡Crea un nuevo proyecto de Astro localmente con nuestro asistente de CLI `create-astro`!
+¡Crea un nuevo proyecto de Astro localmente con nuestro asistente de CLI `create astro`!
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -59,7 +59,8 @@ Visita [astro.new](https://astro.new/) y elige entre una variedad de plantillas 
   </Fragment>
 </PackageManagerTabs>
 
-Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones paso a paso para instalar Astro utilizando tu gestor de paquetes favorito.
+Nuestra [guía de instalación](/es/install/auto/) iene instrucciones completas y paso a paso para instalar Astro usando nuestro asistente CLI, crear un nuevo proyecto desde un repositorio Astro GitHub existente y para instalar Astro manualmente.
+
 
 ## Aprende Astro
 
