--- a/src/pages/en/install/manual.mdx
+++ b/src/pages/en/install/manual.mdx
@@ -1,5 +1,5 @@
 ---
-title: Installation (Manual Setup)
+title: Install Astro with manual setup
 description: 'How to install Astro manually with NPM, PNPM, or Yarn.'
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
