Fix: changing 'avec Astro' to 'dans Astro'

--- a/src/pages/fr/core-concepts/astro-pages.mdx
+++ b/src/pages/fr/core-concepts/astro-pages.mdx
@@ -20,7 +20,7 @@ Astro prend en charge les types de fichiers suivants dans le répertoire `src/pa
 
 Astro utilise une stratégie de routage appelée **routage par fichier**. Chaque fichier de votre répertoire `src/pages/` devient un point d'accès sur votre site en fonction de son chemin d'accès.
 
-📚 En savoir plus sur [Le routage avec Astro](/fr/core-concepts/routing/).
+📚 En savoir plus sur [Le routage dans Astro](/fr/core-concepts/routing/).
 
 ### Lien entre les pages
 
