edit: add type gen to setup

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -36,6 +36,8 @@ export default defineConfig({
 });
 ```
 
+Then, run `astro dev`, `astro build`, or `astro sync` to generate types. This will make the `astro:content` module available for querying and configuring your content collections.
+
 ### Update TypeScript configuration
 
 To benefit from the full TypeScript and autocompletion features of [using schemas with your collections](#defining-a-collection-schema), you may also need to update `tsconfig.json`. Follow the instructions below based on your Astro project's current [TypeScript configuration](/en/guides/typescript/#setup). 
