--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -138,7 +138,7 @@ To configure schemas, create a `src/content/config.ts` file (`.js` and `.mjs` ex
 2. Export a single `collections` object, with each object key corresponding to the collection's folder name.
 
 :::tip
-Run `astro dev`, `astro build`, or `astro sync` before using the `astro:content` module. These commands will generate types for utilities like `defineCollection`.
+Run `astro dev`, `astro build`, or `astro sync` before using the `astro:content` module. These commands will generate types for utilities like `defineCollection()`.
 :::
 
 For example, say you maintain two collections: one for release announcements and one for blog content. Your entries at `src/content/releases/` should include a `title` and `version`.  Your `src/content/engineering-blog/` collection entries should have a `title`, list of `tags`, and an optional `image` URL. 
