i18n(pt-BR): Update `framework-components.mdx` and +9 translations

--- a/src/pages/pt-br/guides/deploy/netlify.mdx
+++ b/src/pages/pt-br/guides/deploy/netlify.mdx
@@ -89,18 +89,8 @@ Para definir as configurações padrão, crie um arquivo `netlify.toml` com o se
 
 ```toml
 [build]
-  command = "npm run build"
+  command = "npx pnpm install --store=node_modules/.pnpm-store && npm run build"
   publish = "dist"
-```
-
-Usando [`pnpm` na Netlify?](https://answers.netlify.com/t/using-pnpm-and-pnpm-workspaces/2759) Use as seguintes configurações no lugar:
-
-```toml
-[build.environment]
-  NPM_FLAGS = "--version" # previne a Netlify de executar npm install
-[build]
-  command = 'npx pnpm i --store=node_modules/.pnpm-store && npm run build'
-  publish = 'dist'
 ```
 
 📚 Mais informações em [“Deploying an existing Astro Git repository”](https://www.netlify.com/blog/how-to-deploy-astro/#deploy-an-existing-git-repository-to-netlify) no blog da Netlify
