--- a/src/pages/pt-br/integrations/integrations.mdx
+++ b/src/pages/pt-br/integrations/integrations.mdx
@@ -3,6 +3,7 @@ layout: ~/layouts/MainLayout.astro
 title: Feito com Astro
 i18nReady: true
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Membros da comunidade Astro tem integrado com sucesso as ferramentas e serviços de terceiros em seus websites Astro!
 
@@ -60,6 +61,21 @@ Apesar das descrições abaixo estarem traduzidas, o conteúdo dos links é em I
 [The Net Ninja](https://www.youtube.com/playlist?list=PL4cUxeGkcC9hZm9NYpd4G-jhoeEk0ls--) - **Vídeo**: Construção de site estático com Figma e Astro 
 
 ## Repositórios / Templates Iniciais
+
+Você pode iniciar um novo projeto Astro com base em um repositório existente no GitHub ao passar o argumento `--template` para o comando `create astro`.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm create astro@latest -- --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm create astro@latest --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
 
 [delucis/astro-netlify-cms](https://github.com/delucis/astro-netlify-cms/) - Template inicial com Astro e Netlify CMS
 
