--- a/src/pages/pt-br/integrations/integrations.mdx
+++ b/src/pages/pt-br/integrations/integrations.mdx
@@ -25,11 +25,7 @@ Apesar das descrições abaixo estarem traduzidas, o conteúdo dos links é em I
 
 [Spread Bagelry](https://spreadbagelry.com) - Astro / Vue / Tailwind / Strapi CMS / Cloudinary
 
-[Public Transport Forum New Zealand](https://publictransportforum.nz/articles) - Astro / Netlify CMS
-
 [My Workshops Live](https://myworkshops.live) - Astro / Svelte / Firebase / Vonage / Web Speech API / reveal.js
-
-[Rafid Muhymin Wafi](https://softhardsystem.com/) -  Astro / Tailwind / WordPress: Headless CMS, comentários, pesquisa
 
 [meizuflux](https://meizuflux.com) - Astro / Hygraph
 
@@ -48,13 +44,7 @@ Apesar das descrições abaixo estarem traduzidas, o conteúdo dos links é em I
 
 [Learn With Jason](https://youtube.com/watch?v=FJOJmKFngLI) - **Vídeo**: Construindo um carrinho de compras customizado com Astro e a API Storefront da Shopify
 
-[Chris Bongers](https://blog.openreplay.com/building-an-astro-website-with-wordpress-as-a-headless-cms) - **Postagem**: Construindo um site Astro com WordPress como Headless CMS
-
 [Front End Horse](https://www.youtube.com/watch?v=qFUfuDSLdxM) - **Vídeo**: Desenvolvendo com Astro & Prismic
-
-[Jaydan Urwin](https://www.youtube.com/watch?v=-jAWLTfsSQw) - **Vídeo**: Crie o seu próprio blog com Astro e Sanity.io
-
-[Aftab Alam](https://aalam.vercel.app/blog/astro-and-git-cms-netlify) - **Postagem**: Escreva o conteúdo do seu site Astro com CMs baseados em Git
 
 [Chris Bongers](https://aviyel.com/post/1006/adding-typesense-search-to-an-astro-static-generated-website) - **Postagem**: Adicionando Typesense Search a um site Astro
 
@@ -76,6 +66,11 @@ Você pode iniciar um novo projeto Astro com base em um repositório existente n
   ```
   </Fragment>
   <Fragment slot="yarn">
+  ```shell
+  yarn create astro --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
 [delucis/astro-netlify-cms](https://github.com/delucis/astro-netlify-cms/) - Template inicial com Astro e Netlify CMS
 
