include nextjs' src directory

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -194,7 +194,7 @@ You may find it helpful to start by converting your Next.js layouts and template
 
 Next has two different methods for creating layout files, each of which handles layouts differently than Astro:
 
-- The `pages` directory
+- The `pages` or `src/pages` directory
 
 - [The `/app` directory (in beta)](https://beta.nextjs.org/docs/routing/pages-and-layouts#layouts)
 
@@ -217,7 +217,7 @@ Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be 
 </html>
 ```
 
-#### Migrating from Next.js' `pages` directory
+#### Migrating from Next.js' `pages` or `src/pages` directory
 
 Your Next project may have a `pages/_document.jsx` file that imports React components to customize your app's `<head>`:
 
@@ -298,9 +298,9 @@ export default function Head() {
 
 ### Migrating Pages and Posts
 
-In Next.js, your posts either live in `/pages` or `/app/routeName/page.jsx`.
+In Next.js, your posts either live in `/pages`, `src/pages` or `/app/routeName/page.jsx`.
 
-In Astro, **all your page content must live within `src/`**.
+In Astro, **all your page content must live within `src/**`.
 
 #### React pages
 
